Add support for Arm Nodegroup in EKS
Signed-off-by: Furkat Gofurov <furkat.gofurov@suse.com>
(cherry picked from commit cf360debf869637dd7c4c3575345a6c7c6a08429)

--- a/charts/eks-operator-crd/templates/crds.yaml
+++ b/charts/eks-operator-crd/templates/crds.yaml
@@ -47,6 +47,9 @@ spec:
               nodeGroups:
                 items:
                   properties:
+                    arm:
+                      nullable: true
+                      type: boolean
                     desiredSize:
                       nullable: true
                       type: integer
